Stopped scroll on mobile nav

--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -16,8 +16,6 @@
 @media screen and (max-width: 480px) {
   .app-grid {
     grid-template-columns: 1fr;
-    /* height: 100vh;
-    overflow: hidden; */
   }
 
   .main-content {
